Kueski - movie detail - fix UI in order to show parameters requested by challenge & new image url string added inside Common xcconfig file

--- a/KueskiMovies/Utilities/SupportFiles/ConfigFiles/Common.xcconfig
+++ b/KueskiMovies/Utilities/SupportFiles/ConfigFiles/Common.xcconfig
@@ -11,4 +11,5 @@
 BEARER_TOKEN = eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI5NmNhYWYyNWM4M2Y0NDllYjFlMjkwMzVlZmQzMjc0OSIsIm5iZiI6MTYwOTIwNzg0MS41Miwic3ViIjoiNWZlYTkwMjEwZTY0YWYwMDQwYTE4OWZmIiwic2NvcGVzIjpbImFwaV9yZWFkIl0sInZlcnNpb24iOjF9.NZRPqHOTeESP0vxfDARZCDlAyFZ39LfK537HZPZhgAg
 
 BASE_URL = api.themoviedb.org
+DETAILED_MOVIE_IMAGE_URL = image.tmdb.org/t/p/w300
 
