--- a/KueskiMovies/Info.plist
+++ b/KueskiMovies/Info.plist
@@ -6,5 +6,7 @@
 	<string>$(BASE_URL)</string>
 	<key>BEARER_TOKEN</key>
 	<string>$(BEARER_TOKEN)</string>
+	<key>DETAILED_MOVIE_IMAGE_URL</key>
+	<string>$(DETAILED_MOVIE_IMAGE_URL)</string>
 </dict>
 </plist>
